--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -25,7 +25,7 @@ div
     script.
       var meting_api = "!{theme.asset.meting_api}";
 
-  //- 黑色模式粒子效果canvas
+  //- 深色模式粒子效果canvas
   if theme.universe.enable
     canvas(id="universe")
     script(async src="https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/dark/dark.js")
