--- a/layout/includes/mixins/post-ui.pug
+++ b/layout/includes/mixins/post-ui.pug
@@ -16,38 +16,27 @@ mixin postUI(posts)
         let no_cover = article.cover === false || !theme.cover.index_enable ? 'no-cover' : ''
       -
       - const new_post = is_current('/') && (maxDate === article.date)
-      if (theme.post_meta.page.categories && article.categories.data.length > 0)
-        .article-meta__categories__box(style=`${(new_post && !theme.cover.index_enable) ? "left: 88px":""}`)
-          each item, index in article.categories.data
-            a(href=url_for(item.path)).article-meta__categories #[=item.name]
-          a.unvisited-post(href=url_for(link) title=title style=`
-            ${!theme.cover.index_enable ? "position: static;" : 
-              new_post ? 
-                (theme.article_double_row ? 
-                  (is_home() && (article.top || article.sticky > 0)) ? "left: 135px;" : "left: 90px;" : 
-                  (is_home() && (article.top || article.sticky > 0)) ? "left: calc(44% + 130px);" : "left: calc(44% + 82px);") 
-                : theme.article_double_row ? ((is_home() && (article.top || article.sticky > 0)) ? "left: 80px;" : "") : (is_home() && (article.top || article.sticky > 0)) ? "left: calc(44% + 78px);": ""}`) 未读
-      else 
-        a.unvisited-post(href=url_for(link) title=title style=`
-            ${!theme.cover.index_enable ? "position: static;" : 
-              new_post ? 
-                (theme.article_double_row ? 
-                  (is_home() && (article.top || article.sticky > 0)) ? "left: 135px;" : "left: 90px;" : 
-                  (is_home() && (article.top || article.sticky > 0)) ? "left: calc(44% + 130px);" : "left: calc(44% + 82px);") 
-                : theme.article_double_row ? ((is_home() && (article.top || article.sticky > 0)) ? "left: 80px;" : "") : (is_home() && (article.top || article.sticky > 0)) ? "left: calc(44% + 78px);": ""}`) 未读
+
       if post_cover && theme.cover.index_enable
         .post_cover(class=leftOrRight)
           a(href=url_for(link) title=title style='display: flex;height: 100%;')
             img.post_bg(src=url_for(post_cover) onerror=`this.onerror=null;this.src='`+ url_for(theme.error_img.post_page) + `'` alt=title style='pointer-events: none')
+
       .recent-post-info(class=no_cover)
-        if new_post
-          span.newPost(style=`${(is_home() && (article.top || article.sticky > 0)) ? 'left: 80px': ''}`) 最新文章
-        a.article-title(href=url_for(link) title=title)= title
+        .recent-post-info-top
+          .recent-post-info-top-tips
+            if (is_home() && (article.top || article.sticky > 0))
+              span.article-meta.sticky-warp
+                i.anzhiyufont.anzhiyu-icon-thumbtack.sticky
+                span.sticky= _p('sticky')
+            if (theme.post_meta.page.categories && article.categories.data.length > 0)
+              each item, index in article.categories.data
+                .article-categories-original=item.name
+            if new_post
+              span.newPost 最新
+            a.unvisited-post(href=url_for(link) title=title) 未读
+          a.article-title(href=url_for(link) title=title)= title
         .article-meta-wrap
-          if (is_home() && (article.top || article.sticky > 0))
-            span.article-meta.sticky-warp
-              i.anzhiyufont.anzhiyu-icon-thumbtack.sticky
-              span.sticky= _p('sticky')
           if (theme.post_meta.page.date_type)
             span.post-meta-date
               if (theme.post_meta.page.date_type === 'both')
