--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -223,8 +223,8 @@
   padding: 0px 1.5rem 0px;
   max-width: 1400px;
   width: 100%;
-  animation: slide-in 0.6s 0s backwards;
-  // overflow: hidden;
+  animation: slide-in 0.6s 0.1s backwards;
+  overflow: hidden;
 
 +maxWidth768()
   #topPostGroup
