优化back-menu-list触发

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -470,11 +470,12 @@
 
 .back-home-button .back-menu-list::before
   position absolute
-  top -22px
+  top -24px
   left 0px
   width 100%
   height 25px
   content ""
+  transition: 0s
 
 .back-home-button .back-menu-list-groups .back-menu-list-group:last-child .back-menu-list
   margin 0 0 8px
