--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -37,15 +37,110 @@ if hexo-config('comments.use') == 'Twikoo'
     background-color: var(--anzhiyu-card-bg);
 
   #twikoo 
+    .OwO .OwO-body
+      border: var(--style-border-always) !important;
+      border-radius: 8px !important;
+      overflow: hidden;
+      background-color: var(--anzhiyu-maskbg) !important;
+      backdrop-filter: saturate(180%) blur(10px);
+      cursor: auto;
+      top: 2.1em !important;
+      transform: translateZ(0);
+      animation: .3s ease .1s 1 normal both running donate_effcet;
+      .OwO-items-show
+        margin: 12px 8px;
+    button.el-button.tk-cancel.el-button--default.el-button--small
+      background: var(--anzhiyu-secondbg);
+      border-radius: 8px;
+      color: var(--anzhiyu-fontcolor);
+      &:hover
+        background: var(--anzhiyu-lighttext);
+        color: var(--anzhiyu-white);
+    .tk-comments a.tk-submit-action-icon.__markdown
+      display: none;
+    &>div.tk-comments>div.tk-submit>div.tk-row.actions>a
+      display: none
+    .el-button.tk-preview
+      display: none;
+    .tk-comments .el-button--primary.is-disabled, .tk-comments .el-button--primary.is-disabled:active, .tk-comments .el-button--primary.is-disabled:focus, .tk-comments .el-button--primary.is-disabled:hover
+      opacity .2
+    .tk-comments .el-button--primary
+      border-color: var(--anzhiyu-fontcolor);
+      color: var(--anzhiyu-card-bg);
+      border-radius: 12px;
+      box-shadow: var(--anzhiyu-shadow-black);
+      transition: .3s;
+      width: 6.25rem;
+      position: absolute;
+      top: -43px;
+      right: 0;
+      margin-left: 0.5rem!important;
+      height: 32px;
+    .tk-input 
+      .el-textarea__inner
+        min-height: 130px !important;
+        border-radius: 15px;
+        display: block;
+        resize: vertical;
+        padding: 16px 16px 40px 16px;
+        line-height: 1.5;
+        box-sizing: border-box;
+        width: 100%;
+        font-size: inherit;
+        color: #606266;
+        background-color: var(--anzhiyu-secondbg);
+        border: var(--style-border-always);
+        transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+    .el-input__inner
+      background: var(--anzhiyu-secondbg)!important;
+      border: none!important;
+      color: var(--anzhiyu-fontcolor)!important;
+      padding-left: 8px;
+    .el-input__inner:focus
+      border: none;
+    .el-input-group__append, .el-input-group__prepend
+      background-color: var(--anzhiyu-card-bg);
+      color: var(--anzhiyu-fontcolor);
+      border-color: var(--anzhiyu-card-border);
+      border: none;
+      font-weight: 700;
+    .el-input-group--prepend .el-input__inner, .el-input-group__append
+      border-radius: 12px;
+    .el-input--small .el-input__inner
+      padding: 8px;
+      padding-left: 16px;
+    .el-input-group--prepend .el-input__inner, .el-input-group__append
+      border-left-width: 0 !important;
+
+    .tk-meta-input
+      position: relative;
+      margin-top: 8px;
+      width: calc(100% - 6.875rem);
+      .el-input.el-input--small.el-input-group.el-input-group--prepend
+        border-radius: 12px;
+        background: var(--anzhiyu-secondbg);
+        border: var(--style-border-always);
+      .el-input .el-input-group__prepend
+        user-select: none;
+        border-radius: 10px 0 0 10px;
+
+    .tk-row 
+      .tk-avatar
+        display: none
+      .tk-col
+        flex-direction: column-reverse;
+      &.actions
+        margin-bottom: 0;
+        margin-left: 0;
+        margin-top: 0;
+        justify-content: space-around;
     .tk-admin
       backdrop-filter: blur(5px);
-    .tk-submit
-      .actions
-        .tk-send
-          background-color: var(--anzhiyu-main)
-          border-color: var(--anzhiyu-main)
-          &:hover 
-            opacity: 0.8;
+    .el-button
+      background-color: var(--anzhiyu-fontcolor);
+      border: 0 solid var(--anzhiyu-main);
+      color: var(--anzhiyu-background);
     .tk-tag-green
       background-color: var(--anzhiyu-main);
       border: none;
@@ -143,44 +238,40 @@ if hexo-config('comments.use') == 'Twikoo'
   }
 
   /* 当用户点击输入框时显示 */
-  .el-input.el-input--small.el-input-group.el-input-group--prepend:focus-within::before,
-  .el-input.el-input--small.el-input-group.el-input-group--prepend:focus-within::after {
+  .el-input.el-input--small.el-input-group.el-input-group--prepend:focus-within::before
     display: block;
-  }
+    animation: commonTipsIn .3s
+    z-index: 2
+
+  .el-input.el-input--small.el-input-group.el-input-group--prepend:focus-within::after
+    display: block;
+    animation: commonTriangleIn .3s
+    // z-index: 2
 
   /* 主内容区 */
   .el-input.el-input--small.el-input-group.el-input-group--prepend::before {
-    /* 先隐藏起来 */
     display: none;
-    /* 绝对定位 */
     position: absolute;
-    /* 向上移动60像素 */
     top: -60px;
-    /* 文字强制不换行，防止left:50%导致的文字换行 */
     white-space: nowrap;
-    /* 圆角 */
     border-radius: 10px;
-    /* 距离左边50% */
     left: 50%;
-    /* 然后再向左边挪动自身的一半，即可实现居中 */
     transform: translate(-50%);
-    /* 填充 */
     padding: 14px 18px;
     background: #444;
     color: #fff;
+    z-index: 100;
   }
 
   /* 小角标 */
   .el-input.el-input--small.el-input-group.el-input-group--prepend::after {
     display: none;
-    content: "";
+    content: '';
     position: absolute;
-    /* 内容大小（宽高）为0且边框大小不为0的情况下，每一条边（4个边）都是一个三角形，组成一个正方形。
-    我们先将所有边框透明，再给其中的一条边添加颜色就可以实现小三角图标 */
     border: 12px solid transparent;
     border-top-color: #444;
     left: 50%;
-    transform: translate(-50%, -48px);
+    transform: translate(-50%,-46px);
   }
 
   /* 评论框  */
@@ -240,36 +331,30 @@ if hexo-config('comments.use') == 'Twikoo'
     margin-bottom: 0.5rem;
   }
 
-  .el-input.el-input--small.el-input-group.el-input-group--prepend:focus-within::before {
-    display: block;
-    animation: commonTipsIn 0.3s;
-  }
-  @keyframes commonTipsIn {
-    0% {
+  @keyframes commonTipsIn
+    0%
       top: -50px;
-      opacity: 0;
-    }
-    100% {
+      opacity: 0
+    100% 
       top: -60px;
-      opacity: 1;
-    }
-  }
+      opacity: 1
 
-  #twikoo .tk-input .el-textarea__inner {
-    min-height: 130px !important;
-    border-radius: 15px;
-    display: block;
-    resize: vertical;
-    padding: 16px 16px 40px 16px;
-    line-height: 1.5;
-    box-sizing: border-box;
-    width: 100%;
-    font-size: inherit;
-    color: #606266;
-    background-color: var(--anzhiyu-card-bg);
-    border: var(--style-border-always);
-    transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  }
+  @keyframes commonTriangleIn
+    0%
+      transform: translate(-50%,-36px);
+      opacity: 0
+    100%
+      transform: translate(-50%,-46px);
+      opacity: 1
+  @keyframes donate_effcet
+    0%
+      opacity: 0;
+      transform: translateY(-20px);
+    100%
+      opacity: 1;
+      filter: none;
+      transform: translateY(0);
+
 
   #body-wrap.page .el-input__inner {
     background: var(--anzhiyu-card-bg);
@@ -333,39 +418,28 @@ if hexo-config('comments.use') == 'Twikoo'
 
   .tk-comments .tk-row-actions-start {
     position: relative;
-    top: -56px;
+    top: -84px;
     left: 17px;
-  }
-
-  .tk-comments .tk-main .tk-row-actions-start {
-    position: relative;
-    top: -56px;
-    left: 16px;
-  }
-
-  .OwO .OwO-body {
-    border: var(--style-border-always) !important;
-    border-radius: 8px !important;
-    overflow: hidden;
-    background-color: var(--anzhiyu-maskbg) !important;
-    backdrop-filter: saturate(180%) blur(10px);
-    cursor: auto;
-    top: 2.1em !important;
   }
 
   @media screen and (max-width: 768px) {
     .OwO .OwO-body {
       width: 260px;
     }
-    .tk-comments .tk-main .tk-row-actions-start {
-      position: absolute;
-      left: 18px;
-      top: -50px;
+    .tk-comments .tk-row-actions-start {
+      top: -176px;
     }
+    #twikoo .tk-comments .tk-submit .el-button--primary {
+      height: 122px;
+      top: -126px;
+    }
+    #twikoo .el-textarea__inner {
+      background: var(--anzhiyu-card-bg)!important;
+      overflow: hidden;
+      resize: none!important;
+    }
+
     .tk-comments button.el-button.tk-preview.el-button--default.el-button--small {
-      display: none;
-    }
-    .tk-comments a.tk-submit-action-icon.__markdown {
       display: none;
     }
     .tk-comments .tk-main .tk-submit .tk-row.actions {
@@ -377,12 +451,6 @@ if hexo-config('comments.use') == 'Twikoo'
     }
     .tk-comments .tk-row-actions-start {
       position: absolute;
-    }
-    #twikoo .tk-submit .actions .tk-send {
-      margin-left: 0
-    }
-    #twikoo .tk-comments .tk-main .tk-submit .actions .tk-send {
-      margin-left: 10px
     }
   }
 
