修复文章列表标签被点击冒泡造成的事件错误跳转

--- a/layout/includes/mixins/post-ui.pug
+++ b/layout/includes/mixins/post-ui.pug
@@ -58,7 +58,7 @@ mixin postUI(posts)
           if (theme.post_meta.page.tags && article.tags.data.length > 0)
             span.article-meta.tags
               each item, index in article.tags.data
-                a(href=url_for(item.path) tabindex="-1").article-meta__tags
+                a(href=url_for(item.path) event.cancelbubble onclick="window.event.cancelBubble=true;").article-meta__tags
                   span 
                     i.anzhiyufont.anzhiyu-icon-hashtag
                     =item.name
