--- a/source/css/_page/flink.styl
+++ b/source/css/_page/flink.styl
@@ -476,3 +476,51 @@ body[data-type="link"]
           margin: 0;
           max-width: 100%;
 
+#article-container
+  .links-friends
+    margin-top: 1em;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(240px,1fr));
+    column-gap: 10px;
+    min-width: 240px;
+    .friends-item
+      margin: 2px 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: calc(320px / 2 - 6px);
+      .player
+        position: relative;
+        z-index: 3;
+        width: 100%;
+        height: 130px;
+        border-radius: 8px;
+        .player-content-hg
+          background: linear-gradient(25deg, #000000 10%, #383838 70%, #000000 100%);
+          position: relative;
+          height: 100%;
+          border-radius: 8px;
+          z-index: 2;
+        .player-content-hg:before
+          content: "";
+          background-image: url(https://www.blatr.cn/images/vip/black-line.svg);
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          border-radius: 8px;
+        .player-content-zs
+          background: linear-gradient(317deg, #a14fd2, #8888fc 30%, #c6bcff) !important;
+        .player-content-zs:before
+          background-image: url(https://www.blatr.cn/images/vip/purple-line.svg) !important;
+        .player-content-pv
+          background: linear-gradient(335deg, #1b8fda 10%, #6fc7e5 70%, #8bc8ef 100%) !important;
+        .player-content-pv:before
+          background-image: url(https://www.blatr.cn/images/vip/blue-line.svg) !important;
+    img
+      margin: 0 4px 0 0 !important;
+    a
+      text-decoration: none !important;
+      padding: 0 !important;
