--- a/layout/includes/anzhiyu/console.pug
+++ b/layout/includes/anzhiyu/console.pug
@@ -9,11 +9,10 @@
   .console-card-group
     .console-card-group-left
       !=partial('includes/widget/card_newest_comment', {}, {cache: true})
-    - const nav_console_music_enable = theme.nav_music.console_widescreen_music
     .console-card-group-right
       .console-card.tags
         .card-content
-          if nav_console_music_enable
+          if theme.nav_music.enable && theme.nav_music.console_widescreen_music
             .author-content-item-tips 音乐
             span.author-content-item-title 灵魂的碰撞💥
           else 
@@ -35,9 +34,10 @@
     .console-btn-item.on#consoleCommentBarrage(onclick='anzhiyu.switchCommentBarrage()', title='热评开关')
       a.commentBarrage
         i.anzhiyufont.anzhiyu-icon-message
-    .console-btn-item#consoleMusic(onclick='anzhiyu.musicToggle()', title='音乐开关')
-      a.music-switch
-        i.anzhiyufont.anzhiyu-icon-music
+    if theme.nav_music.enable
+      .console-btn-item#consoleMusic(onclick='anzhiyu.musicToggle()', title='音乐开关')
+        a.music-switch
+          i.anzhiyufont.anzhiyu-icon-music
     if theme.shortcutKey.enable
       .console-btn-item#consoleKeyboard(onclick='anzhiyu.keyboardToggle()', title='快捷键开关')
         a.keyboard-switch
