分离 `centerConsole` 和 `aside` 卡片页影响，单独控制卡片页显示，用以修复 `config - aside - card_tags/card_archives` 未使能时，中控台右侧页不显示的问题

--- a/layout/includes/header/nav.pug
+++ b/layout/includes/header/nav.pug
@@ -39,7 +39,7 @@ nav#nav
             span=' '+_p('search.title')
       
       input#center-console(type="checkbox")
-      if theme.centerConsole
+      if theme.centerConsole.enable
         label.widget(for="center-console" title=_p("中控台") onclick="anzhiyu.switchConsole();")
           i.left
           i.widget.center
