--- a/layout/includes/anzhiyu/console.pug
+++ b/layout/includes/anzhiyu/console.pug
@@ -25,15 +25,17 @@
           span 文章
         !=partial('includes/widget/card_console_archives', {}, {cache: true})
   .button-group
-    .console-btn-item
-      a.darkmode_switchbutton(title='显示模式切换', href='javascript:void(0);')
-        i.anzhiyufont.anzhiyu-icon-moon
+    if theme.darkmode.enable
+      .console-btn-item
+        a.darkmode_switchbutton(title='显示模式切换', href='javascript:void(0);')
+          i.anzhiyufont.anzhiyu-icon-moon
     .console-btn-item#consoleHideAside(onclick='anzhiyu.hideAsideBtn()', title='边栏显示控制')
       a.asideSwitch
         i.anzhiyufont.anzhiyu-icon-arrows-left-right
-    .console-btn-item.on#consoleCommentBarrage(onclick='anzhiyu.switchCommentBarrage()', title='热评开关')
-      a.commentBarrage
-        i.anzhiyufont.anzhiyu-icon-message
+    if theme.comment_barrage_config.enable
+      .console-btn-item.on#consoleCommentBarrage(onclick='anzhiyu.switchCommentBarrage()', title='热评开关')
+        a.commentBarrage
+          i.anzhiyufont.anzhiyu-icon-message
     if theme.nav_music.enable
       .console-btn-item#consoleMusic(onclick='anzhiyu.musicToggle()', title='音乐开关')
         a.music-switch
