修改了.author-content-item .card-content .banner-button-group .banner-button i 的margin-right为0.25rem;font-size为22px

--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -339,7 +339,8 @@ body[data-type='about'] #web_bg {
 }
 
 .author-content-item .card-content .banner-button-group .banner-button i, .author-content-item .card-content .banner-button-group .banner-button svg {
-  font-size: 1rem;
+  margin-right: 8px;
+  font-size: 22px;
 }
 
 .author-content-item .card-content .banner-button-group .banner-button .banner-button-text {
@@ -347,8 +348,8 @@ body[data-type='about'] #web_bg {
 }
 
 #about-page .author-content-item .card-content .banner-button-group .banner-button i, #about-page .author-content-item .card-content .banner-button-group .banner-button svg {
-  font-size: 1.5rem;
-  margin-right: 0;
+  font-size: 22px;
+  margin-right: 0.25rem;
   height: 40px;
   max-width: 40px;
   display: flex;
@@ -803,8 +804,8 @@ body[data-type='about'] #web_bg {
   }
 
   .author-content-item .card-content .banner-button-group .banner-button i, .author-content-item .card-content .banner-button-group .banner-button svg {
-    margin-right: 0;
-    font-size: 1.5rem;
+    margin-right: 0.25rem;
+    font-size: 22px;
     background: white;
     border-radius: 50%;
     padding: 6px;
