--- a/layout/includes/page/fcircle.pug
+++ b/layout/includes/page/fcircle.pug
@@ -5,7 +5,7 @@ if theme.friends_vue.enable
         .author-content-item-tips 友链
         span.author-content-item-title 最新文章订阅
         .content-bottom
-          .tips 使用 友链朋友圈 订阅友链最新文章
+          .tips=theme.friends_vue.top_tips
         .banner-button-group
           a.banner-button(onclick='pjax.loadUrl("/about")')
             i.anzhiyufont.anzhiyu-icon-arrow-circle-right(style='font-size: 22px; margin-right: 0.25rem')
