修复部分情况下（比如【即刻】）banner-button按钮布局出错的问题

--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -339,7 +339,7 @@ body[data-type='about'] #web_bg {
 }
 
 .author-content-item .card-content .banner-button-group .banner-button i, .author-content-item .card-content .banner-button-group .banner-button svg {
-  margin-right: 8px;
+  margin-right: 0.25rem;
   font-size: 22px;
 }
 
