修复在移动端 banner-button-group错乱的情况

--- a/layout/includes/page/essay.pug
+++ b/layout/includes/page/essay.pug
@@ -9,7 +9,7 @@ if site.data.essay
             .tips=i.tips
           .banner-button-group
             a.banner-button(href=i.buttonLink)
-              i.anzhiyufont.anzhiyu-icon-arrow-circle-right(style='font-size: 1.3rem')
+              i.anzhiyufont.anzhiyu-icon-arrow-circle-right
               span.banner-button-text=i.buttonText
       #bber
         section.timeline.page-1
