--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -801,11 +801,12 @@ body[data-type='about'] #web_bg {
     background: none;
     padding: 0;
     width: auto;
+    backdrop-filter: unset;
   }
 
   .author-content-item .card-content .banner-button-group .banner-button i, .author-content-item .card-content .banner-button-group .banner-button svg {
     margin-right: 0.25rem;
-    font-size: 22px;
+    font-size: 1.5rem;
     background: white;
     border-radius: 50%;
     padding: 6px;
@@ -815,6 +816,7 @@ body[data-type='about'] #web_bg {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: var(--anzhiyu-fontcolor);
   }
 
   .author-content-item .card-content .banner-button-group .banner-button:hover i {
