修复代码框滚动影响页面滚动效果

--- a/source/css/_extra/code/code.css
+++ b/source/css/_extra/code/code.css
@@ -71,6 +71,7 @@
 /* 代码框主题 */
 #article-container figure.highlight {
   border-radius: 10px;
+  overflow-y: hidden;
 }
 #post-comment blockquote {
   background: var(--anzhiyu-secondbg);
